--- a/loading_locations_data_into_dataframes.ipynb
+++ b/loading_locations_data_into_dataframes.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -5082,7 +5082,7 @@
        "   'id': 'FIPS:48183'}]}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5107,7 +5107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5126,7 +5126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -5211,7 +5211,7 @@
        "4  1893-01-01  2025-04-12        Powell County, MT             1  FIPS:30077"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5237,7 +5237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -5286,7 +5286,7 @@
        "296  1891-01-01  2025-04-12  Durham County, NC             1  FIPS:37063"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5312,7 +5312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5346,14 +5346,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error reading ./data/locations/.gitkeep: Expecting value: line 1 column 1 (char 0)\n"
+      "Error reading ./data/locations/.gitkeep: Expecting value: line 1 column 1 (char 0)\n",
+      "Error reading ./data/locations/locations_data_frame.pickle: 'utf-8' codec can't decode byte 0x80 in position 0: invalid start byte\n"
      ]
     }
    ],
@@ -5371,16 +5372,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(9000, 6)"
+       "(38863, 6)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5399,7 +5400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -5434,70 +5435,70 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1894-04-01</td>\n",
+       "      <td>1997-03-06</td>\n",
        "      <td>2025-04-12</td>\n",
-       "      <td>Lawrence County, IL</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>FIPS:17101</td>\n",
-       "      <td>locations_3.json</td>\n",
+       "      <td>Grand Isle, VT 05458</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>ZIP:05458</td>\n",
+       "      <td>locations_10.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1893-01-01</td>\n",
+       "      <td>1948-05-01</td>\n",
        "      <td>2025-04-12</td>\n",
-       "      <td>Lee County, IL</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>FIPS:17103</td>\n",
-       "      <td>locations_3.json</td>\n",
+       "      <td>Highgate Center, VT 05459</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>ZIP:05459</td>\n",
+       "      <td>locations_10.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1896-05-01</td>\n",
+       "      <td>1995-05-08</td>\n",
        "      <td>2025-04-12</td>\n",
-       "      <td>Livingston County, IL</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>FIPS:17105</td>\n",
-       "      <td>locations_3.json</td>\n",
+       "      <td>Hinesburg, VT 05461</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>ZIP:05461</td>\n",
+       "      <td>locations_10.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1906-01-01</td>\n",
+       "      <td>1955-11-01</td>\n",
        "      <td>2025-04-12</td>\n",
-       "      <td>Logan County, IL</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>FIPS:17107</td>\n",
-       "      <td>locations_3.json</td>\n",
+       "      <td>Huntington, VT 05462</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>ZIP:05462</td>\n",
+       "      <td>locations_10.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1902-08-01</td>\n",
+       "      <td>1997-03-06</td>\n",
        "      <td>2025-04-12</td>\n",
-       "      <td>McDonough County, IL</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>FIPS:17109</td>\n",
-       "      <td>locations_3.json</td>\n",
+       "      <td>Isle la Motte, VT 05463</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>ZIP:05463</td>\n",
+       "      <td>locations_10.json</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      mindate     maxdate                   name  datacoverage          id  \\\n",
-       "0  1894-04-01  2025-04-12    Lawrence County, IL           1.0  FIPS:17101   \n",
-       "1  1893-01-01  2025-04-12         Lee County, IL           1.0  FIPS:17103   \n",
-       "2  1896-05-01  2025-04-12  Livingston County, IL           1.0  FIPS:17105   \n",
-       "3  1906-01-01  2025-04-12       Logan County, IL           1.0  FIPS:17107   \n",
-       "4  1902-08-01  2025-04-12   McDonough County, IL           1.0  FIPS:17109   \n",
+       "      mindate     maxdate                       name  datacoverage         id  \\\n",
+       "0  1997-03-06  2025-04-12       Grand Isle, VT 05458          0.95  ZIP:05458   \n",
+       "1  1948-05-01  2025-04-12  Highgate Center, VT 05459          1.00  ZIP:05459   \n",
+       "2  1995-05-08  2025-04-12        Hinesburg, VT 05461          1.00  ZIP:05461   \n",
+       "3  1955-11-01  2025-04-12       Huntington, VT 05462          1.00  ZIP:05462   \n",
+       "4  1997-03-06  2025-04-12    Isle la Motte, VT 05463          0.95  ZIP:05463   \n",
        "\n",
-       "             source  \n",
-       "0  locations_3.json  \n",
-       "1  locations_3.json  \n",
-       "2  locations_3.json  \n",
-       "3  locations_3.json  \n",
-       "4  locations_3.json  "
+       "              source  \n",
+       "0  locations_10.json  \n",
+       "1  locations_10.json  \n",
+       "2  locations_10.json  \n",
+       "3  locations_10.json  \n",
+       "4  locations_10.json  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5516,7 +5517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -5550,71 +5551,71 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>8995</th>\n",
-       "      <td>1963-03-01</td>\n",
-       "      <td>2025-04-10</td>\n",
-       "      <td>Kars, TU</td>\n",
-       "      <td>0.9160</td>\n",
-       "      <td>CITY:TU000030</td>\n",
-       "      <td>locations_0.json</td>\n",
+       "      <th>38858</th>\n",
+       "      <td>1899-10-01</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>Lansdale, PA 19446</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>ZIP:19446</td>\n",
+       "      <td>locations_13.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8996</th>\n",
-       "      <td>1930-01-01</td>\n",
-       "      <td>2025-04-10</td>\n",
-       "      <td>Kastamonu, TU</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>CITY:TU000031</td>\n",
-       "      <td>locations_0.json</td>\n",
+       "      <th>38859</th>\n",
+       "      <td>1994-06-15</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>Mont Clare, PA 19453</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>ZIP:19453</td>\n",
+       "      <td>locations_13.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8997</th>\n",
-       "      <td>1963-01-01</td>\n",
-       "      <td>2025-04-10</td>\n",
-       "      <td>Kirsehir, TU</td>\n",
-       "      <td>0.9992</td>\n",
-       "      <td>CITY:TU000034</td>\n",
-       "      <td>locations_0.json</td>\n",
+       "      <th>38860</th>\n",
+       "      <td>1972-01-01</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>North Wales, PA 19454</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>ZIP:19454</td>\n",
+       "      <td>locations_13.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8998</th>\n",
-       "      <td>1950-01-02</td>\n",
-       "      <td>2025-04-10</td>\n",
-       "      <td>Konya, TU</td>\n",
-       "      <td>0.9233</td>\n",
-       "      <td>CITY:TU000036</td>\n",
-       "      <td>locations_0.json</td>\n",
+       "      <th>38861</th>\n",
+       "      <td>1894-01-01</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>Phoenixville, PA 19460</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>ZIP:19460</td>\n",
+       "      <td>locations_13.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8999</th>\n",
-       "      <td>2003-03-01</td>\n",
-       "      <td>2025-04-10</td>\n",
-       "      <td>Kutahya, TU</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>CITY:TU000037</td>\n",
-       "      <td>locations_0.json</td>\n",
+       "      <th>38862</th>\n",
+       "      <td>1994-06-15</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>Plymouth Meeting, PA 19462</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>ZIP:19462</td>\n",
+       "      <td>locations_13.json</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         mindate     maxdate           name  datacoverage             id  \\\n",
-       "8995  1963-03-01  2025-04-10       Kars, TU        0.9160  CITY:TU000030   \n",
-       "8996  1930-01-01  2025-04-10  Kastamonu, TU        1.0000  CITY:TU000031   \n",
-       "8997  1963-01-01  2025-04-10   Kirsehir, TU        0.9992  CITY:TU000034   \n",
-       "8998  1950-01-02  2025-04-10      Konya, TU        0.9233  CITY:TU000036   \n",
-       "8999  2003-03-01  2025-04-10    Kutahya, TU        1.0000  CITY:TU000037   \n",
+       "          mindate     maxdate                        name  datacoverage  \\\n",
+       "38858  1899-10-01  2025-04-12          Lansdale, PA 19446          1.00   \n",
+       "38859  1994-06-15  2025-04-12        Mont Clare, PA 19453          0.95   \n",
+       "38860  1972-01-01  2025-04-12       North Wales, PA 19454          1.00   \n",
+       "38861  1894-01-01  2025-04-12      Phoenixville, PA 19460          1.00   \n",
+       "38862  1994-06-15  2025-04-12  Plymouth Meeting, PA 19462          0.95   \n",
        "\n",
-       "                source  \n",
-       "8995  locations_0.json  \n",
-       "8996  locations_0.json  \n",
-       "8997  locations_0.json  \n",
-       "8998  locations_0.json  \n",
-       "8999  locations_0.json  "
+       "              id             source  \n",
+       "38858  ZIP:19446  locations_13.json  \n",
+       "38859  ZIP:19453  locations_13.json  \n",
+       "38860  ZIP:19454  locations_13.json  \n",
+       "38861  ZIP:19460  locations_13.json  \n",
+       "38862  ZIP:19462  locations_13.json  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5641,7 +5642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -5684,7 +5685,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5698,7 +5699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -5720,20 +5721,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         mindate     maxdate         name  datacoverage             id  \\\n",
-      "7000  2003-03-01  2025-04-10  Kutahya, TU           1.0  CITY:TU000037   \n",
-      "8999  2003-03-01  2025-04-10  Kutahya, TU           1.0  CITY:TU000037   \n",
+      "          mindate     maxdate         name  datacoverage             id  \\\n",
+      "30863  2003-03-01  2025-04-10  Kutahya, TU           1.0  CITY:TU000037   \n",
+      "36862  2003-03-01  2025-04-10  Kutahya, TU           1.0  CITY:TU000037   \n",
       "\n",
-      "                source  \n",
-      "7000  locations_1.json  \n",
-      "8999  locations_0.json  \n"
+      "                 source  \n",
+      "30863  locations_1.json  \n",
+      "36862  locations_0.json  \n"
      ]
     }
    ],
@@ -5761,7 +5762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -5795,7 +5796,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7002</th>\n",
+       "      <th>30865</th>\n",
        "      <td>1974-08-01</td>\n",
        "      <td>2025-04-10</td>\n",
        "      <td>Mersin, TU</td>\n",
@@ -5808,14 +5809,14 @@
        "</div>"
       ],
       "text/plain": [
-       "         mindate     maxdate        name  datacoverage             id  \\\n",
-       "7002  1974-08-01  2025-04-10  Mersin, TU           1.0  CITY:TU000041   \n",
+       "          mindate     maxdate        name  datacoverage             id  \\\n",
+       "30865  1974-08-01  2025-04-10  Mersin, TU           1.0  CITY:TU000041   \n",
        "\n",
-       "                source  \n",
-       "7002  locations_1.json  "
+       "                 source  \n",
+       "30865  locations_1.json  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5834,17 +5835,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1002    locations_2.json\n",
+       "4002    locations_2.json\n",
        "Name: source, dtype: object"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5863,15 +5864,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n",
-      "Ther are 9 unique sources in the DataFrame.\n"
+      "39\n",
+      "Ther are 39 unique sources in the DataFrame.\n"
      ]
     }
    ],
@@ -5883,26 +5884,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "source\n",
-       "locations_3.json    1000\n",
-       "locations_2.json    1000\n",
-       "locations_5.json    1000\n",
-       "locations_8.json    1000\n",
-       "locations_4.json    1000\n",
-       "locations_7.json    1000\n",
-       "locations_6.json    1000\n",
-       "locations_1.json    1000\n",
-       "locations_0.json    1000\n",
+       "locations_10.json    1000\n",
+       "locations_12.json    1000\n",
+       "locations_22.json    1000\n",
+       "locations_14.json    1000\n",
+       "locations_15.json    1000\n",
+       "locations_23.json    1000\n",
+       "locations_35.json    1000\n",
+       "locations_6.json     1000\n",
+       "locations_19.json    1000\n",
+       "locations_28.json    1000\n",
+       "locations_26.json    1000\n",
+       "locations_1.json     1000\n",
+       "locations_32.json    1000\n",
+       "locations_24.json    1000\n",
+       "locations_25.json    1000\n",
+       "locations_33.json    1000\n",
+       "locations_0.json     1000\n",
+       "locations_29.json    1000\n",
+       "locations_34.json    1000\n",
+       "locations_7.json     1000\n",
+       "locations_18.json    1000\n",
+       "locations_36.json    1000\n",
+       "locations_30.json    1000\n",
+       "locations_3.json     1000\n",
+       "locations_2.json     1000\n",
+       "locations_31.json    1000\n",
+       "locations_27.json    1000\n",
+       "locations_11.json    1000\n",
+       "locations_20.json    1000\n",
+       "locations_5.json     1000\n",
+       "locations_21.json    1000\n",
+       "locations_9.json     1000\n",
+       "locations_16.json    1000\n",
+       "locations_17.json    1000\n",
+       "locations_8.json     1000\n",
+       "locations_4.json     1000\n",
+       "locations_37.json    1000\n",
+       "locations_13.json    1000\n",
+       "locations_38.json     863\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5921,11 +5952,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "863"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# \n"
+    "# how many records are in source = locations_38.json\n",
+    "\n",
+    "df[df['source'] == 'locations_38.json'].shape[0]\n",
+    "# or\n",
+    "# df[df['source'] == 'locations_38.json'].count()['id']\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -5937,7 +5986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
