--- a/loading_pickled_data.ipynb
+++ b/loading_pickled_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -59,48 +59,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1894-04-01</td>\n",
+       "      <td>1997-03-06</td>\n",
        "      <td>2025-04-12</td>\n",
-       "      <td>Lawrence County, IL</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>FIPS:17101</td>\n",
-       "      <td>locations_3.json</td>\n",
+       "      <td>Grand Isle, VT 05458</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>ZIP:05458</td>\n",
+       "      <td>locations_10.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1893-01-01</td>\n",
+       "      <td>1948-05-01</td>\n",
        "      <td>2025-04-12</td>\n",
-       "      <td>Lee County, IL</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>FIPS:17103</td>\n",
-       "      <td>locations_3.json</td>\n",
+       "      <td>Highgate Center, VT 05459</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>ZIP:05459</td>\n",
+       "      <td>locations_10.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1896-05-01</td>\n",
+       "      <td>1995-05-08</td>\n",
        "      <td>2025-04-12</td>\n",
-       "      <td>Livingston County, IL</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>FIPS:17105</td>\n",
-       "      <td>locations_3.json</td>\n",
+       "      <td>Hinesburg, VT 05461</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>ZIP:05461</td>\n",
+       "      <td>locations_10.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1906-01-01</td>\n",
+       "      <td>1955-11-01</td>\n",
        "      <td>2025-04-12</td>\n",
-       "      <td>Logan County, IL</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>FIPS:17107</td>\n",
-       "      <td>locations_3.json</td>\n",
+       "      <td>Huntington, VT 05462</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>ZIP:05462</td>\n",
+       "      <td>locations_10.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1902-08-01</td>\n",
+       "      <td>1997-03-06</td>\n",
        "      <td>2025-04-12</td>\n",
-       "      <td>McDonough County, IL</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>FIPS:17109</td>\n",
-       "      <td>locations_3.json</td>\n",
+       "      <td>Isle la Motte, VT 05463</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>ZIP:05463</td>\n",
+       "      <td>locations_10.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -112,86 +112,86 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8995</th>\n",
-       "      <td>1963-03-01</td>\n",
-       "      <td>2025-04-10</td>\n",
-       "      <td>Kars, TU</td>\n",
-       "      <td>0.9160</td>\n",
-       "      <td>CITY:TU000030</td>\n",
-       "      <td>locations_0.json</td>\n",
+       "      <th>38858</th>\n",
+       "      <td>1899-10-01</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>Lansdale, PA 19446</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>ZIP:19446</td>\n",
+       "      <td>locations_13.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8996</th>\n",
-       "      <td>1930-01-01</td>\n",
-       "      <td>2025-04-10</td>\n",
-       "      <td>Kastamonu, TU</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>CITY:TU000031</td>\n",
-       "      <td>locations_0.json</td>\n",
+       "      <th>38859</th>\n",
+       "      <td>1994-06-15</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>Mont Clare, PA 19453</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>ZIP:19453</td>\n",
+       "      <td>locations_13.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8997</th>\n",
-       "      <td>1963-01-01</td>\n",
-       "      <td>2025-04-10</td>\n",
-       "      <td>Kirsehir, TU</td>\n",
-       "      <td>0.9992</td>\n",
-       "      <td>CITY:TU000034</td>\n",
-       "      <td>locations_0.json</td>\n",
+       "      <th>38860</th>\n",
+       "      <td>1972-01-01</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>North Wales, PA 19454</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>ZIP:19454</td>\n",
+       "      <td>locations_13.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8998</th>\n",
-       "      <td>1950-01-02</td>\n",
-       "      <td>2025-04-10</td>\n",
-       "      <td>Konya, TU</td>\n",
-       "      <td>0.9233</td>\n",
-       "      <td>CITY:TU000036</td>\n",
-       "      <td>locations_0.json</td>\n",
+       "      <th>38861</th>\n",
+       "      <td>1894-01-01</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>Phoenixville, PA 19460</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>ZIP:19460</td>\n",
+       "      <td>locations_13.json</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8999</th>\n",
-       "      <td>2003-03-01</td>\n",
-       "      <td>2025-04-10</td>\n",
-       "      <td>Kutahya, TU</td>\n",
-       "      <td>1.0000</td>\n",
-       "      <td>CITY:TU000037</td>\n",
-       "      <td>locations_0.json</td>\n",
+       "      <th>38862</th>\n",
+       "      <td>1994-06-15</td>\n",
+       "      <td>2025-04-12</td>\n",
+       "      <td>Plymouth Meeting, PA 19462</td>\n",
+       "      <td>0.95</td>\n",
+       "      <td>ZIP:19462</td>\n",
+       "      <td>locations_13.json</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>9000 rows × 6 columns</p>\n",
+       "<p>38863 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         mindate     maxdate                   name  datacoverage  \\\n",
-       "0     1894-04-01  2025-04-12    Lawrence County, IL        1.0000   \n",
-       "1     1893-01-01  2025-04-12         Lee County, IL        1.0000   \n",
-       "2     1896-05-01  2025-04-12  Livingston County, IL        1.0000   \n",
-       "3     1906-01-01  2025-04-12       Logan County, IL        1.0000   \n",
-       "4     1902-08-01  2025-04-12   McDonough County, IL        1.0000   \n",
-       "...          ...         ...                    ...           ...   \n",
-       "8995  1963-03-01  2025-04-10               Kars, TU        0.9160   \n",
-       "8996  1930-01-01  2025-04-10          Kastamonu, TU        1.0000   \n",
-       "8997  1963-01-01  2025-04-10           Kirsehir, TU        0.9992   \n",
-       "8998  1950-01-02  2025-04-10              Konya, TU        0.9233   \n",
-       "8999  2003-03-01  2025-04-10            Kutahya, TU        1.0000   \n",
+       "          mindate     maxdate                        name  datacoverage  \\\n",
+       "0      1997-03-06  2025-04-12        Grand Isle, VT 05458          0.95   \n",
+       "1      1948-05-01  2025-04-12   Highgate Center, VT 05459          1.00   \n",
+       "2      1995-05-08  2025-04-12         Hinesburg, VT 05461          1.00   \n",
+       "3      1955-11-01  2025-04-12        Huntington, VT 05462          1.00   \n",
+       "4      1997-03-06  2025-04-12     Isle la Motte, VT 05463          0.95   \n",
+       "...           ...         ...                         ...           ...   \n",
+       "38858  1899-10-01  2025-04-12          Lansdale, PA 19446          1.00   \n",
+       "38859  1994-06-15  2025-04-12        Mont Clare, PA 19453          0.95   \n",
+       "38860  1972-01-01  2025-04-12       North Wales, PA 19454          1.00   \n",
+       "38861  1894-01-01  2025-04-12      Phoenixville, PA 19460          1.00   \n",
+       "38862  1994-06-15  2025-04-12  Plymouth Meeting, PA 19462          0.95   \n",
        "\n",
-       "                 id            source  \n",
-       "0        FIPS:17101  locations_3.json  \n",
-       "1        FIPS:17103  locations_3.json  \n",
-       "2        FIPS:17105  locations_3.json  \n",
-       "3        FIPS:17107  locations_3.json  \n",
-       "4        FIPS:17109  locations_3.json  \n",
-       "...             ...               ...  \n",
-       "8995  CITY:TU000030  locations_0.json  \n",
-       "8996  CITY:TU000031  locations_0.json  \n",
-       "8997  CITY:TU000034  locations_0.json  \n",
-       "8998  CITY:TU000036  locations_0.json  \n",
-       "8999  CITY:TU000037  locations_0.json  \n",
+       "              id             source  \n",
+       "0      ZIP:05458  locations_10.json  \n",
+       "1      ZIP:05459  locations_10.json  \n",
+       "2      ZIP:05461  locations_10.json  \n",
+       "3      ZIP:05462  locations_10.json  \n",
+       "4      ZIP:05463  locations_10.json  \n",
+       "...          ...                ...  \n",
+       "38858  ZIP:19446  locations_13.json  \n",
+       "38859  ZIP:19453  locations_13.json  \n",
+       "38860  ZIP:19454  locations_13.json  \n",
+       "38861  ZIP:19460  locations_13.json  \n",
+       "38862  ZIP:19462  locations_13.json  \n",
        "\n",
-       "[9000 rows x 6 columns]"
+       "[38863 rows x 6 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
